load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library", "go_prefix")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/ericchiang/got",
)

go_prefix("github.com/ericchiang/got")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ericchiang/got",
    visibility = ["//visibility:private"],
    deps = ["//app:go_default_library"],
)

go_binary(
    name = "got",
    importpath = "github.com/ericchiang/got",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
