load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "goget.go",
        "imports.go",
        "manifest.go",
    ],
    importpath = "github.com/ericchiang/got/imports",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/Masterminds/vcs:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go4.org/lock:go_default_library",
        "//vendor/golang.org/x/sync/errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cache_test.go",
        "goget_test.go",
        "imports_test.go",
        "manifest_test.go",
    ],
    importpath = "github.com/ericchiang/got/imports",
    library = ":go_default_library",
    deps = ["//vendor/github.com/pkg/errors:go_default_library"],
)
