load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["log.go"],
    importpath = "github.com/ericchiang/got/log",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["log_test.go"],
    importpath = "github.com/ericchiang/got/log",
    library = ":go_default_library",
)
